Switching the files to other system
